2006-10-06  Per Bothner  <per@bothner.com>

	* TimeUtils.java (coerceToDateTime, coerceToDate, coerceToTime):
	Change to use new XTimeType.parseDateTime helper method.
	* Compare.java (atomicCompare): Likewise.

2006-10-04  Per Bothner  <per@bothner.com>

	* NumberValue.java (isNaN): New static utility method.
	* DistinctValues.java (hash): Change algorithm so equal real numbers
	have the same hash value.
	(matches): Return true if both values satisfy NumberValue.isNaN.
	* Compare.java (LENIENT_COMPARISON, LENIENT_EQ): New flags.
	(equalityComparison): New helper method.
	(atomicCompare): Fix handling of UntypedAtomic and Boolean.
	More compliant handling for DateTime and Duration.  Error on
	mismatched types if not lenient and not an equality comparison.
	($Ex$Eq, valNe): Should also be true if either argument is NaN.
	* MinMax.java (minMax): Add hack for NaN.
	* IntegerRange.java (apply): Do atomization and handle UntypedAtomic.
	* SequenceUtils.java (indexOf$X): Comparison should be lenient.
	(deepEqualItems): New helper, to check for NaN.
	(deepEqual, deepEqualChildren): Use new helper method.

	* NamedCollator.java (UNICODE_CODEPOINT_COLLATION): Match XQTS.

2006-09-30  Per Bothner  <per@bothner.com>

	* Compare.java (atomicCompare): Throw exception if not comparable.
	* MinMax.java: Rewrite to not use Reduce and to better match spec.
	(min, max, minMax, convert): New static methods.

	* ArithOp.java (apply2): 'idiv' result must sometimes be cast to
	integer.

	* ValuesFilter.java (matches): Fix number case to match spec.

	* QNameUtils.java (resolveQName): Catch errors.

	* Reduce.java (sum): Use XQuery-specific ArithOp, rather than
	Scheme-appropriate gnu.kawa.functions.AddOp instance.

	* StringUtils.java (appendCodepoint): Check codepoints for validity.

2006-09-28  Per Bothner  <per@bothner.com>

	* NodeUtils.java (name, getLang, lang, documentUri): New static
	methods to implement new fn:xxx functions.